Fixed issue #06653: Invalid alignment in Opera Dev Added text alignment style

--- a/templates/basic/template.css
+++ b/templates/basic/template.css
@@ -133,6 +133,7 @@ table.question {
   border: 1px solid #AAAAAA;
   border-collapse: collapse;
   width: 100%;
+  text-align: left;
 }
 
 td {
